--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1> welcome to the website</h1>
-        <h2>Hello!</></h2>
+        <h2>Hello!</h2>
         Hello World
     </body>
 </html>
