--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <head>
         <title>Hello</title>
+        <style>
+            h1 {
+                color:aquamarine;
+                font-weight: 300;
+            }
+        </style>
     </head>
     <body>
         <h1> welcome to the website</h1>
